<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/login_download_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/login_name_edit"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/name"
        android:hint="@string/name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1" />


    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enter" />


</LinearLayout>